измененная версия сайта + новый раздел

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<DOCTYPE! html>
-  <html>
+<!DOCTYPE html>
+  <html lang="ru">
     <head>
       <meta charset="UTF-8">
       <title>Food Construct</title>
-      <!--Подключение шрифтов-->>
+      <!--Подключение шрифтов-->
       <link rel="stylesheet" href="style.css">
       <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,8 +20,8 @@
         </div>
         <div class = "navigation">
           <nav>
-            <a href="#about">О нас</a>
-            <a href="ссылка">Собрать ланч</a>
+            <a href="#about" id="active">О нас</a>
+            <a href="order.html">Собрать ланч</a>
             <a href="ссылка">Заказы</a>
             <a href="#contacts">Контакты</a>
           </nav>
@@ -29,7 +29,7 @@
       </header>
       <main class="container">
         <div class="main_photo">
-            <img src="https://leclick.ru/uploads/publication/4140508301486552261_1.jpg">
+            <img src="dishes/main.jpg" alt="Картинка с блюдами">
         </div>
         <!--Раздел о нас-->
         <section id="about" class="about">
@@ -47,6 +47,7 @@
             <li>Доставка весь день с 7:00 до 23:00</li>
             <li>Забота о вашем комфорте</li>
           </ul>
+        </section>
         <section id="popular_food">
           <h2>Топ-5 популярных блюд</h2>
           <table>
