--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <nav>
             <a href="#about" id="active">О нас</a>
             <a href="order.html">Собрать ланч</a>
+            <a href="checkout.html">Оформить заказ</a>
             <a href="ссылка">Заказы</a>
             <a href="#contacts">Контакты</a>
           </nav>
