--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#about" id="active">О нас</a>
             <a href="order.html">Собрать ланч</a>
             <a href="checkout.html">Оформить заказ</a>
-            <a href="ссылка">Заказы</a>
+            <a href="orders.html">Заказы</a>
             <a href="#contacts">Контакты</a>
           </nav>
         </div>
