--- a/order.html
+++ b/order.html
@@ -20,7 +20,7 @@
         <a href="index.html">О нас</a>
         <a href="order.html" id="active">Собрать ланч</a>
         <a href="checkout.html">Оформить заказ</a>
-        <a href="ссылка">Заказы</a>
+        <a href="order.html">Заказы</a>
         <a href="#contacts">Контакты</a>
       </nav>
     </div>
