--- a/checkout.html
+++ b/checkout.html
@@ -20,7 +20,7 @@
         <a href="index.html">О нас</a>
         <a href="order.html">Собрать ланч</a>
         <a href="checkout.html" id="active">Оформить заказ</a>
-        <a href="ссылка">Заказы</a>
+        <a href="orders.html">Заказы</a>
         <a href="#contacts">Контакты</a>
       </nav>
     </div>
