--- a/order.html
+++ b/order.html
@@ -9,22 +9,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css">
 </head>
 <body>
-  <header class="container">
-    <div class="company_name">
-      <h1>Food Constructor</h1>
-    </div>
-    <div class = "navigation">
-      <nav>
-        <a href="index.html">О нас</a>
-        <a href="order.html" id="active">Собрать ланч</a>
-        <a href="checkout.html">Оформить заказ</a>
-        <a href="order.html">Заказы</a>
-        <a href="#contacts">Контакты</a>
-      </nav>
-    </div>
-  </header>
+  <div id="bootstrap-navbar"></div>
 
   <main class="container">
      <!-- БЛОК С ВАРИАНТАМИ -->
@@ -211,5 +201,35 @@
 
   <!-- Подключение единого скрипта -->
   <script src="script.js"></script>
+  <script src="load-header.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Загружаем навигацию
+        fetch('navbar.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('bootstrap-navbar').innerHTML = html;
+            })
+            .catch(error => {
+                console.error('Error loading navbar:', error);
+                // Если fetch не работает, вставляем напрямую
+                document.getElementById('bootstrap-navbar').innerHTML = `
+                    <nav class="navbar navbar-expand-lg navbar-light" style="background:white;box-shadow:0 2px 10px rgba(0,0,0,0.08);padding:1rem 0;position:fixed;top:0;width:100%;z-index:1000;">
+                        <div class="container">
+                            <a class="navbar-brand" href="index.html" style="font-family:'Public Sans',sans-serif;font-weight:700;font-size:1.8rem;color:#321832;">
+                                Food<span style="color:#FFD166;">Constructor</span>
+                            </a>
+                            <div class="navbar-nav ms-auto">
+                                <a class="nav-link" href="index.html" style="font-weight:600;color:#321832;padding:0.5rem 1.2rem;">Главная</a>
+                                <a class="nav-link active" href="order.html" style="font-weight:600;background:#FFD166;color:#321832;padding:0.5rem 1.2rem;border-radius:20px;">Собрать ланч</a>
+                                <a class="nav-link" href="checkout.html" style="font-weight:600;color:#321832;padding:0.5rem 1.2rem;">Оформить заказ</a>
+                                <a class="nav-link" href="orders.html" style="font-weight:600;color:#321832;padding:0.5rem 1.2rem;">Мои заказы</a>
+                            </div>
+                        </div>
+                    </nav>
+                    <style>body{padding-top:70px !important;}</style>
+                `;
+            });
+    </script>
 </body>
 </html>
